TP3 (exercice 4 pas encore fini)

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
@@ -1,4 +1,16 @@
 # GUI properties
+january=january
+february=february
+march=march
+april=april
+may=may
+june=june
+july=july
+august=august
+september=september
+october=october
+november=november
+december=december
 monday=Monday
 tuesday=Tuesday
 wednesday=Wednesday
@@ -14,3 +26,18 @@ fri=Fri
 sat=Sat
 sun=Sun
 next=Next
+
+file=File
+load=Load
+save=Save
+quit=Quitter
+
+edit=Edit
+view=View
+month=Month
+week=Week
+day=Day
+
+help=Help
+display=Display
+about=About
