Ajout des interractions sur les JMenuItem

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
@@ -34,10 +34,12 @@ quit=Quitter
 
 edit=Edit
 view=View
-month=Month
-week=Week
-day=Day
+MONTH_VIEW=Month
+WEEK_VIEW=Semaine
+DAY_VIEW=Jour
 
 help=Help
 display=Display
 about=About
+
+notImplementedError=This feature is not implemented yet.
