Début du ExamEventWidget

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
@@ -43,3 +43,4 @@ display=Display
 about=About
 
 notImplementedError=This feature is not implemented yet.
+parseDateError=The date must comply with the requested format.
