La navigabilité dans les vues Mois et Semaine fonctionnent. Le jour sélectionné est surligné en orange.

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
@@ -27,6 +27,7 @@ sat=Sat
 sun=Sun
 next=Next
 
+newEvent=New event
 file=File
 load=Load
 save=Save
@@ -44,3 +45,5 @@ about=About
 
 notImplementedError=This feature is not implemented yet.
 parseDateError=The date must comply with the requested format.
+
+ok=OK
