--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
@@ -36,12 +36,18 @@ quit=Quitter
 edit=Edit
 view=View
 MONTH_VIEW=Month
-WEEK_VIEW=Semaine
-DAY_VIEW=Jour
+WEEK_VIEW=Week
+DAY_VIEW=Day
 
 help=Help
 display=Display
 about=About
+
+new=New
+
+date=Date
+time=Time
+student=Student
 
 notImplementedError=This feature is not implemented yet.
 parseDateError=The date must comply with the requested format.
