Nombreux ajouts dont gestion des personnes

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
@@ -1,55 +1,41 @@
-# GUI properties
-january=january
-february=february
-march=march
-april=april
-may=may
-june=june
-july=july
-august=august
-september=september
-october=october
-november=november
-december=december
-monday=Monday
-tuesday=Tuesday
-wednesday=Wednesday
-thursday=Thursday
-friday=Friday
-saturday=Saturday
-sunday=Sunday
-mon=Mon
-tue=Tue
-wed=Wed
-thu=Thu
-fri=Fri
-sat=Sat
-sun=Sun
-next=Next
-
-newEvent=New event
+# General commands
 file=File
-load=Load
+load=Open
 save=Save
-quit=Quitter
-
+quit=Quit
 edit=Edit
 view=View
-MONTH_VIEW=Month
-WEEK_VIEW=Week
-DAY_VIEW=Day
-
 help=Help
 display=Display
 about=About
-
 new=New
+ok=OK
+addItem=Add
+editItem=Edit
+delItem=Delete
 
+# Calendar
+newEvent=New event
+MONTH_VIEW=Month
+WEEK_VIEW=Week
+DAY_VIEW=Day
 date=Date
 time=Time
-student=Student
 
-notImplementedError=This feature is not implemented yet.
-parseDateError=The date must comply with the requested format.
+# People
+general=General
+contact=Contact
+firstname=First name
+lastname=Last name
+phone=Phone
+mail=Mail
+type_student=Student
+type_jury=Juror
+type_students=Students
+type_jurys=Jury
+add_student=Add student
+add_jury=Add jury
+managePeople=Manage people
 
-ok=OK
+notImplementedError=This feature hasn't been implemented yet.
+
