--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
@@ -38,4 +38,6 @@ add_jury=Add jury
 managePeople=Manage people
 
 notImplementedError=This feature hasn't been implemented yet.
-
+saveError=Unable to save. Check you have the right permissions.
+loadError=Unable to load.
+noStudentsError=Before adding an exam, start by adding some students in Edit > Manage people.
