Ajout de la possibilité d'affecter des membres du jury à une soutenance

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
@@ -13,6 +13,8 @@ ok=OK
 addItem=Add
 editItem=Edit
 delItem=Delete
+and=and
+others=others
 
 # Calendar
 newEvent=New event
@@ -37,6 +39,8 @@ type_jurys=Jury
 add_student=Add student
 add_jury=Add jury
 managePeople=Manage people
+nobody=Nobody
+selectJury=Select jurys
 
 notImplementedError=This feature hasn't been implemented yet.
 saveError=Unable to save. Check you have the right permissions.
