Ajout d'un système de détection de conflits

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res.properties
@@ -41,6 +41,8 @@ add_jury=Add jury
 managePeople=Manage people
 nobody=Nobody
 selectJury=Select jurys
+checkConflicts=Check conflicts
+noConflicts=No conflict detected
 
 notImplementedError=This feature hasn't been implemented yet.
 saveError=Unable to save. Check you have the right permissions.
